<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <groupId>fpc.aoc2023</groupId>
        <artifactId>aoc-maven</artifactId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>maven/pom.xml</relativePath>
    </parent>
    <artifactId>aoc</artifactId>
    <packaging>pom</packaging>

    <name>${project.name}</name>

    <modules>
        <module>maven</module>
        <module>fpc.aoc.api</module>
        <module>fpc.aoc.common</module>
        <module>fpc.aoc.input</module>
        <module>fpc.aoc.problems</module>
        <module>fpc.aoc.launcher</module>
    </modules>
</project>
